<resources>
    <string name="app_name">DOCUMENT LLC</string>
    <string name="login">Вход</string>
    <string name="passWorker">Код сотрудника</string>
    <string name="passAdm">Задайте пароль</string>
    <string name="nameEmployee">Имя</string>
    <string name="emailAdm">Задайте email</string>
    <string name="APP_KEY">elw6ey40dkbo1i0</string>
    <string name="select_images_from_gallery">Выберите фото из галереи</string>
    <string name="gallery_app_not_found">Галерея недоступна на устройстве</string>
    <string name="import_complete">Фотографии добавлены в приложение</string>
    <string name="import_failed">Не удалось добавить фотографии</string>
    <string name="share_photos">Поделиться фото</string>
    <string name="share_videos">Поделиться видео</string>
    <string name="share_archive">Поделиться архивом</string>
    <string name="add_files_from">Добавить файлы</string>
    <string name="add_from_gallery">Галерея</string>
    <string name="add_from_files">Файловый менеджер</string>
    <string name="open_trash">Корзина</string>
    <string name="clear_trash">Очистить корзину</string>
    <string name="confirm_clear_trash_title">Очистить корзину?</string>
    <string name="confirm_clear_trash_message">Все файлы из корзины будут удалены без возможности восстановления. Продолжить?</string>
    <string name="trash_cleared">Корзина очищена</string>
    <string name="trash_clear_failed">Не удалось очистить корзину</string>
    <string name="zoom_control">Масштаб</string>

    <string-array name="image_formats">
        <item>JPEG</item>
        <item>PNG</item>
    </string-array>
    <string-array name="white_balance_options">
        <item>AUTO</item>
        <item>INCANDESCENT</item>
        <item>FLUORESCENT</item>
        <item>DAYLIGHT</item>
        <item>CLOUDY</item>
    </string-array>
    <string-array name="hdr_options">
        <item>OFF</item>
        <item>ON</item>
    </string-array>
    <string-array name="audio_options">
        <item>OFF</item>
        <item>ON</item>
        <item>MONO</item>
        <item>STEREO</item>
    </string-array>

    <string name="file_manager_selection_initial">Выбрано: 0</string>
    <string name="file_manager_selection_count">Выбрано: %1$d</string>
    <string name="file_manager_select_all">Выбрать всё</string>
    <string name="file_manager_select_none">Отмена</string>
    <string name="file_manager_actions">Действия</string>

    <string name="file_manager_sort_description">Переключить порядок сортировки</string>

    <string name="camera_resolution_title"></string>
    <string name="camera_resolution_close"></string>

    <string name="trash_cleared_automatically"></string>
    <!-- Context menu actions -->
    <string name="action_move">Переместить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_share">Поделиться</string>
    <string name="action_rename">Переименовать</string>
    <string name="action_select_multiple">Выбрать несколько</string>

    <!-- Image Preview Actions -->
    <string name="image_preview_move_success">Файл успешно перемещен</string>
    <string name="image_preview_move_error">Ошибка при перемещении файла</string>
    <string name="image_preview_file_not_found">Файл не найден</string>
    <string name="cd_af_ae_lock">AE/AF Lock indicator</string>
    <string name="cd_exposure_overlay">Exposure adjustment overlay</string>

    <!-- Sort menu labels (Russian) -->
    <string name="sort_date_asc_label">По дате (возрастание)</string>
    <string name="sort_date_desc_label">По дате (убывание)</string>
    <string name="sort_name_asc_label">По имени (А→Я)</string>
    <string name="sort_name_desc_label">По имени (Я→А)</string>
    <string name="sort_size_asc_label">По размеру (возрастание)</string>
    <string name="sort_size_desc_label">По размеру (убывание)</string>
    <string name="error_saving_settings">Ошибка сохранения настроек</string>
    <string name="no_images_to_display">No images to display.</string>
    <string name="delete_image_dialog_title">Delete Image</string>
    <string name="delete_image_dialog_message">Are you sure you want to delete this image?</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_image_failed">Failed to delete image.</string>
    <string name="share_image_chooser_title">Share Image</string>
    <string name="image_not_found">Image not found.</string>
    <string name="title_activity_gallery">Gallery</string>
</resources>