<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/sort_mode_group" android:checkableBehavior="single">
        <item
            android:id="@+id/sort_date_asc"
            android:title="@string/sort_date_asc_label"
            android:checkable="true" />
        <item
            android:id="@+id/sort_date_desc"
            android:title="@string/sort_date_desc_label"
            android:checkable="true" />
        <item
            android:id="@+id/sort_name_asc"
            android:title="@string/sort_name_asc_label"
            android:checkable="true" />
        <item
            android:id="@+id/sort_name_desc"
            android:title="@string/sort_name_desc_label"
            android:checkable="true" />
        <item
            android:id="@+id/sort_size_asc"
            android:title="@string/sort_size_asc_label"
            android:checkable="true" />
        <item
            android:id="@+id/sort_size_desc"
            android:title="@string/sort_size_desc_label"
            android:checkable="true" />
    </group>

</menu>
